[package]
name = "raydium-launchpad-logger"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
carbon-core = { workspace = true }
carbon-log-metrics = { workspace = true }
carbon-raydium-launchpad-decoder = { workspace = true }
carbon-yellowstone-grpc-datasource = { workspace = true }
yellowstone-grpc-proto = { workspace = true }
solana-instruction = { workspace = true }

async-trait = { workspace = true }
dotenv = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[dependencies.rustls]
default-features = false
features = ["std", "aws_lc_rs"]
version = "0.23.0"
